--- a/src/base.css
+++ b/src/base.css
@@ -3,19 +3,31 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: auto 1fr;
-
     grid-gap: 25px;
-
     grid-template-areas:
         "header header"
         "nav main"
         "footer footer";
+    height: 100%;
+}
 
-    background-color: #ccc;
+.app-wrapper-header {
+    grid-area: header;
+    background-color: #fff;
+}
+
+.app-wrapper-aside {
+    grid-area: nav;
+    background-color: #A8EBFF;
 }
 
 .app-wrapper-main {
     grid-area: main;
+    background-color: #fff;
+}
+
+.app-wrapper-footer {
+    grid-area: footer;
     background-color: #fff;
     padding: 0 15px;
 }
