--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,10 +1,20 @@
 .app-header {
-    grid-area: header;
-    background-color: #fff;
-    padding: 40px 15px;
+    background-color: #F5F3EA;
+    padding: 15px 40px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
-.app-header img {
+.app-header_logo img {
     width: 40px;
     height: 40px;
+}
+.app-header_text  {
+    flex: 1;
+    text-align: center;
+}
+.app-header_text h1 {
+    text-transform: uppercase;
+    font-size: 40px;
 }
