--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,12 @@ html,
 body {
     height: 100%;
     width: 100%;
+    background-color: #01142F;
+
 }
 #root {
     height: 100%;
     display: flex;
     flex-direction: column;;
+    background-color: #01142F;
 }
