--- a/src/components/dialogs/messageItem/messageItem.module.css
+++ b/src/components/dialogs/messageItem/messageItem.module.css
@@ -1,4 +1,21 @@
 .messages-item {
-    padding: 10px;
+    padding: 20px;
+    color: #fff;
+    background-color: #fff;
+    color: #000;
+    border-radius: 15px;
+    font-size: 25px;
+    font-style: italic;
+}
+.messages-item {
+    margin-bottom: 25px;
+}
 
+.messages-item:nth-child(odd) {
+    border: 1px solid goldenrod;
+    text-align: right;
+    background-color: #ccc;
+}
+.messages-item:nth-child(even) {
+    border: 1px solid #000;
 }
