--- a/src/components/main/myposts/myposts.module.css
+++ b/src/components/main/myposts/myposts.module.css
@@ -5,3 +5,32 @@
 .main__posts-post {
 
 }
+
+.app-main__posts-create {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.app-main__posts-create textarea {
+    width: 300px;
+    height: 30px;
+    margin-bottom: 25px;
+    resize: none;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.app-main__posts-add {
+    width: 100px;
+    height: 30px;
+    margin-bottom: 25px;
+
+}
+.app-main__posts-remove {
+    width: 100px;
+    height: 30px;
+    margin-bottom: 25px;    
+}
