--- a/src/components/main/myposts/myposts.module.css
+++ b/src/components/main/myposts/myposts.module.css
@@ -22,3 +22,11 @@
     border-radius: 15px;
     padding: 10px;
 }
+
+
+.main-button {
+    width: 100px;
+    height: 30px;
+    margin-bottom: 25px;
+
+}
